[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/UI/ControllerConfig.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/FrontBack.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/FaceButton.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/Stick.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/CompassBack.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/Trigger.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/CompassFront.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/CompassCrosshair.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/Bumper.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/TopBack.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/ScrewLeft.png" type="Texture" id=11]
[ext_resource path="res://assets/UI/Settings/ControllerConfig/ScrewRight.png" type="Texture" id=12]

[node name="ControllerConfig" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 480.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 480.0
margin_bottom = 272.0
custom_constants/separation = 0

[node name="TopBack" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 80.0
texture = ExtResource( 10 )
stretch_mode = 4

[node name="BumperLeft" type="Sprite" parent="MarginContainer/VBoxContainer/TopBack"]
position = Vector2( 160, 32 )
texture = ExtResource( 9 )
centered = false
hframes = 2

[node name="BumperRight" type="Sprite" parent="MarginContainer/VBoxContainer/TopBack"]
position = Vector2( 288, 32 )
texture = ExtResource( 9 )
centered = false
hframes = 2

[node name="TriggerLeft" type="Sprite" parent="MarginContainer/VBoxContainer/TopBack"]
position = Vector2( 160, 0 )
texture = ExtResource( 6 )
centered = false
hframes = 2

[node name="TriggerRight" type="Sprite" parent="MarginContainer/VBoxContainer/TopBack"]
position = Vector2( 288, 0 )
texture = ExtResource( 6 )
centered = false
hframes = 2

[node name="FrontBack" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 480.0
margin_bottom = 224.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="ScrewLeft" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack"]
position = Vector2( 224, 40 )
texture = ExtResource( 11 )
hframes = 4

[node name="ScrewRight" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack"]
position = Vector2( 256, 40 )
texture = ExtResource( 12 )
hframes = 4

[node name="StickLeft" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack"]
position = Vector2( 192, 64 )
texture = ExtResource( 4 )
centered = false
hframes = 2

[node name="StickRight" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack"]
position = Vector2( 256, 64 )
texture = ExtResource( 4 )
centered = false
hframes = 2

[node name="FaceButtonTop" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack"]
position = Vector2( 288, 16 )
texture = ExtResource( 3 )
centered = false
hframes = 2

[node name="FaceButtonLeft" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack"]
position = Vector2( 272, 32 )
texture = ExtResource( 3 )
centered = false
hframes = 2

[node name="FaceButtonRight" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack"]
position = Vector2( 304, 32 )
texture = ExtResource( 3 )
centered = false
hframes = 2

[node name="FaceButtonBottom" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack"]
position = Vector2( 288, 48 )
texture = ExtResource( 3 )
centered = false
hframes = 2

[node name="Compass" type="Control" parent="MarginContainer/VBoxContainer/FrontBack"]
margin_left = 176.0
margin_top = 48.0
margin_right = 176.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompassBack" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack/Compass"]
texture = ExtResource( 5 )

[node name="CompassCrosshair" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack/Compass"]
texture = ExtResource( 8 )

[node name="CompassFront" type="Sprite" parent="MarginContainer/VBoxContainer/FrontBack/Compass"]
texture = ExtResource( 7 )
